Add rainbow of images

--- a/src/components/cookies.module.css
+++ b/src/components/cookies.module.css
@@ -3,6 +3,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 2rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .acceptCookies {
