--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -1,55 +1,74 @@
-.navbar {
-    padding: 1rem;
-    background-color: #4285da;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    font-size: 1rem;
-    font-weight:600;
-    align-items: center;
+.desktopNavbar {
+  padding: 1rem;
+  background-color: #4285da;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 1rem;
+  font-weight: 600;
+  align-items: center;
+}
+
+.mobileNavbar {
+  display: none;
 }
 
 ul {
-    list-style: none;
-    display: flex;
-    gap: 2rem;
+  list-style: none;
+  display: flex;
+  gap: 2rem;
 }
 
 .navLogo {
-    display: flex;
-    gap: 1rem;
-    height: 50px;
-    align-items: center;
+  display: flex;
+  gap: 1rem;
+  height: 50px;
+  align-items: center;
 }
 
 .navLink {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 #signButton {
-    border: 1px solid white;
-    padding: 1rem 1.5rem;
-    border-radius: 9px;
+  border: 1px solid white;
+  padding: 1rem 1.5rem;
+  border-radius: 9px;
 }
 
 #signButton:hover {
-    background-color: white;
-    color: #4285da;
+  background-color: white;
+  color: #4285da;
 }
 
 #demoRequest {
-    color: #4285da;
-    background-color: white;
-    border: 1px solid #4285da;
-    padding: 1rem 1.5rem;
-    border-radius: 9px;
-
+  color: #4285da;
+  background-color: white;
+  border: 1px solid #4285da;
+  padding: 1rem 1.5rem;
+  border-radius: 9px;
 }
 
 #demoRequest:hover {
-    border: 1px solid white;
+  border: 1px solid white;
+  background-color: #4285da;
+  color: white;
+}
+
+/* Mobile version */
+@media (max-width: 500px) {
+  .desktopNavbar {
+    display: none;
+  }
+  .mobileNavbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     background-color: #4285da;
-    color: white;
+  }
+  .bm-burger-bars {
+    background: black;
+  }
 }
