--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -39,3 +39,11 @@
     text-decoration: none;
     border-radius: 4px;
 }
+
+/* Mobile version */
+@media (max-width: 500px) {
+  .gridContainer {
+    display: flex;
+    flex-direction: column;
+  }
+}
