--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -27,17 +27,17 @@
 .cardList {
   display: flex;
   flex-direction: column;
-  list-style-image: url('../images/Subtract.png');
+  list-style-image: url("../images/Subtract.png");
   text-align: center;
 }
 
 .cardButton {
-    background-color: #206ECF;
-    color: white;
-    padding: 0.5rem 1rem;
-    margin-top: 1rem;
-    text-decoration: none;
-    border-radius: 4px;
+  background-color: #206ecf;
+  color: white;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  text-decoration: none;
+  border-radius: 4px;
 }
 
 /* Mobile version */
