--- a/src/components/splash.module.css
+++ b/src/components/splash.module.css
@@ -1,41 +1,41 @@
 .splash-screen {
-    background: linear-gradient(45deg, #206ECF, #71B0FF);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    gap: 1rem;
+  background: linear-gradient(45deg, #206ecf, #71b0ff);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  gap: 1rem;
 }
 
 .splashLink {
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    border: 1px solid white;
-    padding: 1rem;
-    background-color: white;
-    border-radius: 9px;
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  border: 1px solid white;
+  padding: 1rem;
+  background-color: white;
+  border-radius: 9px;
 }
 
 .splashLink:hover {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .firstPar {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 .longPar {
-    text-align: center;
+  text-align: center;
 }
 
 .splashHeader {
-    font-size: 4rem;
-    text-align: center;
+  font-size: 4rem;
+  text-align: center;
 }
 
 @media (max-width: 800px) {
-    .longPar {
-        padding: 2rem;
-    }
+  .longPar {
+    padding: 2rem;
+  }
 }
